Project

General

Profile

Actions

Bug #6791

closed

ext/js on/generator/generator.c fails to compile on nightly build (AIX 6.1)

Bug #6791: ext/js on/generator/generator.c fails to compile on nightly build (AIX 6.1)

Added by pedz (Perry Smith) about 14 years ago. Updated about 14 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
Version 2 nightly tarball
Backport:
[ruby-core:46744]

Description

gcc -I. -I../../../.ext/include/powerpc-aix6.1.0.0 -I/usr/work/src/snapshot/include -I/usr/work/src/snapshot/ext/json/generator -DRUBY_EXTCONF_H="extconf.h"
-O3 -fno-fast-math -ggdb3 -Wall -Wextra -Wno-unused-parameter -Wno-parentheses -Wno-long-long -Wno-missing-field-initializers -Wunused-variable -Wpointer-
arith -Wwrite-strings -Wdeclaration-after-statement -Wimplicit-function-declaration -ansi -std=iso9899:199409 -o generator.o -c /usr/work/src/snapshot/ext/js
on/generator/generator.c
In file included from /usr/include/sys/m_types.h:40:0,
from /gsa/ausgsa-p9/06/ruby/bin/../lib/gcc/powerpc-ibm-aix6.1.0.0/4.5.2/include-fixed/sys/types.h:510,
from /gsa/ausgsa-p9/06/ruby/bin/../lib/gcc/powerpc-ibm-aix6.1.0.0/4.5.2/include-fixed/string.h:74,
from /usr/work/src/snapshot/include/ruby/ruby.h:51,
from /usr/work/src/snapshot/include/ruby.h:33,
from /usr/work/src/snapshot/ext/json/generator/../fbuffer/fbuffer.h:6,
from /usr/work/src/snapshot/ext/json/generator/generator.c:1:
/usr/include/sys/vm_types.h:36:18: error: expected '=', ',', ';', 'asm' or 'attribute' before 'vmhandle_t'
/usr/include/sys/vm_types.h:43:17: error: expected '=', ',', ';', 'asm' or 'attribute' before 'vmhandle32_t'

The -ansi and -std=iso9899:199409 somehow confused AIX's standards.h file. I notice that ALL_SOURCE is (re)defined in config.h.

It is the -ansi flag I believe that is doing the harm. Removing that gets the file to compile. Adding that in causes standards.h to not define POSIX_SOURCE and that leads to ulong_t (and other typedefs) not being defined.

AIX version is 6.1 TL07 SP03. GCC is 4.5.2

Updated by kanemoto (Yutaka Kanemoto) about 14 years ago Actions #1 [ruby-core:46752]

Hi Perry,

Does this resolve this issue in your env?

diff --git a/ext/json/fbuffer/fbuffer.h b/ext/json/fbuffer/fbuffer.h
index f7c2b03..0c53296 100644
--- a/ext/json/fbuffer/fbuffer.h
+++ b/ext/json/fbuffer/fbuffer.h
@@ -2,8 +2,8 @@
#ifndef FBUFFER_H
#define FBUFFER_H

-#include <assert.h>
#include "ruby.h"
+#include <assert.h>

#ifdef HAVE_RUBY_ENCODING_H
#include "ruby/encoding.h"

--
Yutaka KANEMOTO
http://d.hatena.ne.jp/kinpoco/

Updated by Anonymous about 14 years ago Actions #2 [ruby-core:46767]

On Jul 25, 2012, at 2:23 AM, Yutaka Kanemoto wrote:

Hi Perry,

Does this resolve this issue in your env?

diff --git a/ext/json/fbuffer/fbuffer.h b/ext/json/fbuffer/fbuffer.h
index f7c2b03..0c53296 100644
--- a/ext/json/fbuffer/fbuffer.h
+++ b/ext/json/fbuffer/fbuffer.h
@@ -2,8 +2,8 @@
#ifndef FBUFFER_H
#define FBUFFER_H

-#include <assert.h>
#include "ruby.h"
+#include <assert.h>

#ifdef HAVE_RUBY_ENCODING_H
#include "ruby/encoding.h"

Yes it does. Thank you.

I also see your other email and I'll reply to that as well.

I plan to do a build on AIX using the nightly build perhaps once a week to try and correct any build issues early. I need to use something in production and I plan to use 1.9.3 p194 right now. I'm open to suggestions on these matters.

Thank you again,
Perry

Updated by kanemoto (Yutaka Kanemoto) about 14 years ago Actions #3

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r36541.
Perry, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


avoid compilation error on AIX by -ansi -std=iso9899:199409 (r36038). [ruby-core:46744] [Bug #6791].

This issue is fixed in upper stream as issue #142. (https://github.com/flori/json/issues/142)

Actions

Also available in: PDF Atom